--- a/package.json
+++ b/package.json
@@ -28,10 +28,19 @@
         "build-nolog": "next build"
     },
     "dependencies": {
+        "@radix-ui/react-slot": "^1.1.2",
+        "@tailwindcss/postcss": "^4.0.8",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-react": "^0.475.0",
         "next": "14.2.3",
         "phaser": "^3.88.2",
+        "postcss": "^8.5.3",
         "react": "^18",
-        "react-dom": "^18"
+        "react-dom": "^18",
+        "tailwind-merge": "^3.0.2",
+        "tailwindcss": "^4.0.8",
+        "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
         "@types/node": "^20",
