--- a/package.json
+++ b/package.json
@@ -28,10 +28,14 @@
         "build-nolog": "next build"
     },
     "dependencies": {
+        "@radix-ui/react-avatar": "^1.1.3",
+        "@radix-ui/react-progress": "^1.1.2",
         "@radix-ui/react-slot": "^1.1.2",
+        "@radix-ui/react-tabs": "^1.1.3",
         "@tailwindcss/postcss": "^4.0.8",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "framer-motion": "^12.4.7",
         "lucide-react": "^0.475.0",
         "next": "14.2.3",
         "phaser": "^3.88.2",
